# Operating-Systems

./: CMakeLists.txt  Makefile  _cat  _detachTest  _echo  _exitWait  _forktest  _grep  _helloW  _init  _kill  _ln  _ls  _mkdir  _pathTest  _pathTest1  _pathTest2.1  _pathTest2.2  _pathTest3  _pathTest4  _pathTest5  _policy  _policySysTest  _prioritySysTest  _quitXV6  _rm  _sanity  _schedulingTest1  _schedulingTest10  _schedulingTest11  _schedulingTest12  _schedulingTest2  _schedulingTest3  _schedulingTest4  _schedulingTest5  _schedulingTest6  _schedulingTest7  _schedulingTest8  _schedulingTest9  _sh  (+59 more)
