cmake_minimum_required(VERSION 3.13)
project(Assignment1)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(Project_Test/include)

add_executable(Assignment1
        Project_Test/include/ProjectTest.h
        Project_Test/include/Tests.h
        Project_Test/src/ProjectTest.cpp
        Project_Test/src/temp.cpp
        Project_Test/src/Tests.cpp
        Project_Test/XV6_Tests/detachTest.c
        Project_Test/XV6_Tests/exitWait.c
        Project_Test/XV6_Tests/helloW.c
        Project_Test/XV6_Tests/pathTest.c
        Project_Test/XV6_Tests/pathTest1.c
        Project_Test/XV6_Tests/pathTest2.1.c
        Project_Test/XV6_Tests/pathTest2.2.c
        Project_Test/XV6_Tests/pathTest3.c
        Project_Test/XV6_Tests/pathTest4.c
        Project_Test/XV6_Tests/pathTest5.c
        Project_Test/XV6_Tests/policySysTest.c
        Project_Test/XV6_Tests/prioritySysTest.c
        Project_Test/XV6_Tests/quitXV6.c
        Project_Test/XV6_Tests/schedulingTest1.c
        Project_Test/XV6_Tests/schedulingTest10.c
        Project_Test/XV6_Tests/schedulingTest11.c
        Project_Test/XV6_Tests/schedulingTest12.c
        Project_Test/XV6_Tests/schedulingTest13.c
        Project_Test/XV6_Tests/schedulingTest2.c
        Project_Test/XV6_Tests/schedulingTest3.c
        Project_Test/XV6_Tests/schedulingTest4.c
        Project_Test/XV6_Tests/schedulingTest5.c
        Project_Test/XV6_Tests/schedulingTest6.c
        Project_Test/XV6_Tests/schedulingTest7.c
        Project_Test/XV6_Tests/schedulingTest8.c
        Project_Test/XV6_Tests/schedulingTest9.c
        Project_Test/XV6_Tests/usertests.c
        asm.h
        ass1ds.cpp
        ass1ds.hpp
        bio.c
        bootmain.c
        buf.h
        cat.c
        console.c
        date.h
        defs.h
        echo.c
        elf.h
        exec.c
        fcntl.h
        file.c
        file.h
        forktest.c
        fs.c
        fs.h
        grep.c
        ide.c
        init.c
        ioapic.c
        kalloc.c
        kbd.c
        kbd.h
        kill.c
        lapic.c
        ln.c
        log.c
        ls.c
        main.c
        memide.c
        memlayout.h
        mkdir.c
        mkfs.c
        mmu.h
        mp.c
        mp.h
        param.h
        picirq.c
        pipe.c
        policy.c
        printf.c
        proc.c
        proc.h
        rm.c
        sanity.c
        schedulinginterface.h
        sh.c
        sleeplock.c
        sleeplock.h
        spinlock.c
        spinlock.h
        stat.h
        stressfs.c
        string.c
        syscall.c
        syscall.h
        sysfile.c
        sysproc.c
        test.c
        trap.c
        traps.h
        types.h
        uart.c
        ulib.c
        umalloc.c
        user.h
        vm.c
        wc.c
        x86.h
        zombie.c)
